--- a/Indra Putra Mahayuda_final_project.ipynb
+++ b/Indra Putra Mahayuda_final_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10,70 +10,13 @@
      "output_type": "stream",
      "text": [
       "Selamat Datang di MailSend\n",
-      "Program ini digunakan untuk mengirimkan email ke banyak alamat\n",
-      "Masukkan Email Pengirim : indraa25.pmy@gmail.com\n",
-      "Masukkan Password : pucanganom25\n",
-      "=============================================\n",
-      "\n",
-      "==========================================\n",
-      "Silakan pilih menu berikut : \n",
-      "1. Tambah Alamat\n",
-      "2. Daftar Alamat\n",
-      "3. Kirim Email\n",
-      "4. Keluar\n",
-      "Pilih Menu (hanya angka) : 1\n",
-      "-------------------------------------\n",
-      "Masukkan Alamat Email penerima : indrapmy@ce.student.pens.ac.id\n",
-      "==========================================\n",
-      "Silakan pilih menu berikut : \n",
-      "1. Tambah Alamat\n",
-      "2. Daftar Alamat\n",
-      "3. Kirim Email\n",
-      "4. Keluar\n",
-      "Pilih Menu (hanya angka) : 1\n",
-      "-------------------------------------\n",
-      "Masukkan Alamat Email penerima : elsy.sabrina.r@gmail.com\n",
-      "==========================================\n",
-      "Silakan pilih menu berikut : \n",
-      "1. Tambah Alamat\n",
-      "2. Daftar Alamat\n",
-      "3. Kirim Email\n",
-      "4. Keluar\n",
-      "Pilih Menu (hanya angka) : 2\n",
-      "-------------------------------------\n",
-      "Berikut adalah daftar penerima : \n",
-      "indrapmy@ce.student.pens.ac.id\n",
-      "elsy.sabrina.r@gmail.com\n",
-      "\n",
-      "==========================================\n",
-      "Silakan pilih menu berikut : \n",
-      "1. Tambah Alamat\n",
-      "2. Daftar Alamat\n",
-      "3. Kirim Email\n",
-      "4. Keluar\n",
-      "Pilih Menu (hanya angka) : 3\n",
-      "Email akan dikirim ke : \n",
-      "indrapmy@ce.student.pens.ac.id\n",
-      "elsy.sabrina.r@gmail.com\n",
-      "\n",
-      "Tuliskan Subject : Coba lagi\n",
-      "Masukkan pesan : Masih dicoba\n",
-      "Email telah dikirim ke indrapmy@ce.student.pens.ac.id:\n",
-      "Email telah dikirim ke elsy.sabrina.r@gmail.com:\n",
-      "==========================================\n",
-      "Silakan pilih menu berikut : \n",
-      "1. Tambah Alamat\n",
-      "2. Daftar Alamat\n",
-      "3. Kirim Email\n",
-      "4. Keluar\n",
-      "Pilih Menu (hanya angka) : 4\n",
-      "Program telah selesai\n"
+      "Program ini digunakan untuk mengirimkan email ke banyak alamat\n"
      ]
     }
    ],
    "source": [
     "import smtplib\n",
-    "import getpass\n",
+    "from getpass import getpass\n",
     "from email.mime.multipart import MIMEMultipart\n",
     "from email.mime.text import MIMEText\n",
     "\n",
@@ -137,7 +80,7 @@
     "    print(\"Selamat Datang di MailSend\")\n",
     "    print(\"Program ini digunakan untuk mengirimkan email ke banyak alamat\")\n",
     "    fromaddr = input(\"Masukkan Email Pengirim : \")\n",
-    "    password = input(\"Masukkan Password : \")\n",
+    "    password = getpass(\"Masukkan Password : \")\n",
     "    print(\"=============================================\\n\")\n",
     "    while True :\n",
     "        print(\"==========================================\")\n",
@@ -163,94 +106,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\"indraa25.pmy@gmail.com\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-2-cd7e012eb814>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-cd7e012eb814>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    \"indrapmy@ce.student.pens.ac.id\u001b[0m\n\u001b[1;37m                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\"indrapmy@ce.student.pens.ac.id\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Masukkan Alamat Email penerima : indra\n",
-      "indra\n",
-      "Masukkan Alamat Email penerima : indra..\n",
-      "indra\n",
-      "indra..\n",
-      "Masukkan Alamat Email penerima : indra\n",
-      "indra\n",
-      "indra..\n",
-      "indra\n",
-      "Masukkan Alamat Email penerima : \n",
-      "indra\n",
-      "indra..\n",
-      "indra\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-0a35da263740>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 21\u001b[1;33m     \u001b[0mtambah_email\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     22\u001b[0m     \u001b[0mtampilkan_email\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m     \u001b[0mcreate_email\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-12-0a35da263740>\u001b[0m in \u001b[0;36mtambah_email\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mtambah_email\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m     \u001b[0malamat\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Masukkan Alamat Email penerima : \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m     email = {\n\u001b[0;32m      6\u001b[0m         \u001b[1;34m\"alamat\"\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0malamat\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m    858\u001b[0m                 \u001b[1;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    859\u001b[0m             )\n\u001b[1;32m--> 860\u001b[1;33m         return self._input_request(str(prompt),\n\u001b[0m\u001b[0;32m    861\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    862\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m    902\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    903\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 904\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Interrupted by user\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    905\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    906\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid Message:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
-     ]
-    }
-   ],
-   "source": [
-    "daftar_email = []\n",
-    "\n",
-    "def tambah_email() : \n",
-    "    alamat = input(\"Masukkan Alamat Email penerima : \")\n",
-    "    email = {\n",
-    "        \"alamat\" : alamat\n",
-    "    }\n",
-    "    daftar_email.append(email)\n",
-    "\n",
-    "def tampilkan_email():\n",
-    "    for email in daftar_email:\n",
-    "        print(\"{}\".format(email[\"alamat\"]))\n",
-    "        \n",
-    "def create_email():\n",
-    "    f = open(\"Daftar email.txt\", \"w\")\n",
-    "    for email in daftar_email:\n",
-    "        f.write(\"{}\\n\".format(email[\"alamat\"]))\n",
-    "    f.close()\n",
-    "\n",
-    "while True :\n",
-    "    tambah_email()\n",
-    "    tampilkan_email()\n",
-    "    create_email()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
